Improvements to support multiple sim types
Switched to use java serialization + in-memory storage instead of morphia disk-based storage
# 00.00.39 (56172) Sep 5, 2011
Send one-way messages in a separate non-blocking thread
Fixed concurrentmodificationexception in Server
# 00.00.38 (56166) Sep 5, 2011
# 00.00.37 (56164) Sep 5, 2011
Rewrote prototype to use java.net and use one thread per client
Added logout command
Started prototype for java.net
Changed TimeControlFrame to use Not instead of SettableNot, see #3045
# 00.00.36 (51892) May 13, 2011
# 00.00.35 (51890) May 13, 2011
# 00.00.34 (51887) May 13, 2011
# 00.00.33 (51885) May 13, 2011
# 00.00.32 (51883) May 13, 2011
# 00.00.31 (51882) May 13, 2011
# 00.00.30 (51881) May 13, 2011
# 00.00.29 (51880) May 13, 2011
# 00.00.28 (49891) Mar 16, 2011
Added a clear button that resets the database
# 00.00.27 (49838) Mar 15, 2011
Removed console output
# 00.00.26 (49836) Mar 15, 2011
Send single messages instead of batching
Send json from client machines instead of POJO graphs
# 00.00.25 (49813) Mar 15, 2011
Switched from Serializable to IProguardKeepClass to support Jackson beans
# 00.00.24 (49811) Mar 15, 2011
# 00.00.23 (49809) Mar 15, 2011
Converted to use Jackson for increased performance
# 00.00.22 (49806) Mar 14, 2011
Added batch transmission
Fixed: gravity-and-orbits depends on org.bson.* and com.google.*
# 00.00.21 (49761) Mar 13, 2011
Minor user interface improvements
Added table prototype
Added classroom summary information
Autoplay recordings on selection
Make recordings persist across server sessions
Improved session list
Updated recording playback to work with mongobd
# 00.00.20 (49744) Mar 12, 2011
Feasibility test for MongoDB + Morphia
# 00.00.19 (49742) Mar 12, 2011
Provide single data points instead of batches for recordings
# 00.00.18 (49740) Mar 11, 2011
# 00.00.17 (49739) Mar 11, 2011
Increased max payload size by 1000x
# 00.00.16 (49734) Mar 11, 2011
Fixed timeout for full recording downloads