@@ -1,10 +1,10 @@
 // Copyright 2002-2011, University of Colorado
-package edu.colorado.phet.simsharing.teacher;
+package edu.colorado.phet.simsharing.messages;
 
 import java.io.Serializable;
 
 /**
  * @author Sam Reid
  */
-public class GetSessionList implements Serializable {
+public class GetActiveStudentList implements Serializable {
 }
