@@ -1,10 +1,10 @@
 // Copyright 2002-2011, University of Colorado
-package edu.colorado.phet.simsharing.messages;
+package edu.colorado.phet.simsharing.teacher;
 
 import java.io.Serializable;
 
 /**
  * @author Sam Reid
  */
-public class GetStudentList implements Serializable {
+public class ListAllSessions implements Serializable {
 }
